--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,9 @@
   "name": "server",
   "version": "1.0.0",
   "main": "src/index.ts",
+  "scripts": {
+    "start" : "nodemon src/index.ts"
+  },
   "license": "MIT",
   "dependencies": {
     "@types/better-sqlite3": "^7.6.12",
